--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -31,8 +31,8 @@ $color-error: #f44336;
 $gradient-color-start: $color-primary-darker;
 $gradient-color-end: $color-secondary;
 
-$wave-gradient-color-start: $color-primary;
-$wave-gradient-color-end: $color-primary-darker;
+$wave-gradient-color-start: $color-secondary;
+$wave-gradient-color-end: $color-primary;
 
 $light-gradient-color-start: #ffffff;
 $light-gradient-color-end: #ffe3e3;
